--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2015-12-20  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* .gitignore: Created.
+
+2015-12-20  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	* simple-glider/wing-left.scad (wing_left_3d): Deleted.
 	(wing_left): Modify to rotate after adding pegs and use common 3D
 	wing.
