--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,27 @@
+2016-01-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* simple-glider-2/constants.h: Separate GAP and GAP2 into variants
+	for XY and Z dimensions, move PEG_THICK into fuselage.scad.
+	* simple-glider-2/fuselage.scad: Add constants for fuselage
+	separation and peg dimensions. Generate pegs as well as fuselage
+	halves.
+	(fuselage_no_pegs): Renamed as fuselage.
+	(fuse_hull_with_pegs): Created to add pegs before holes
+	(fuselage): Renamed from fuselage_no_pegs and based on
+	fuse_full_with_pegs.
+	(peg, peg_set): Created.
+
 2016-01-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* simple-glider-2/constants.h: Add PEG_THICK
 	* simple-glider-2/fuselage.scad: Add FUSE_WALL_THICK
 	(nose): Created
-	(module fore_cyl): Allow for sphere on nose.
+	(fore_cyl): Allow for sphere on nose.
 	(bare_hull, inner_hull, full_hull): Created.
 	(fuse_hull): Create as shell from subsidiary modules.
 	(fuselage_no_pegs): Renaming of old fuselage module.
 	(peg_hole, all_peg_holes): Created.
-	(module fuselage): Now union of fuselage_no_pegs and all_peg_holes.
+	(fuselage): Now union of fuselage_no_pegs and all_peg_holes.
 
 2016-01-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
