--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-01-07  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* simple-glider-2/fuselage.scad: Make fuselage wall thicker.
+	(module peg): No need for explicit brim.
+
 2016-01-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* simple-glider-2/fuselage.scad (fuselage): Fix typo in constant.
